--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Aerial by HTML5 UP</title>
+		<title> RockyTimes </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,13 +18,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Abhijeet Saxena</h1>
+						<h2>Hey there, I'm</h2>
+						<h1><del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del> Abhijeet Saxena <del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del></h1>
 						<p>Web Developer &nbsp;&bull;&nbsp; Quirky Geek &nbsp;&bull;&nbsp; Never asked for this</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon fa-linkedin"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
@@ -33,7 +34,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">Made with <span class="icon fa-heart"></span> by <a href="http://html5up.net">Abhi</a>.</span>
+						<span class="copyright">Made with <span class="icon fa-heart"></span> by <a href="#">ROCKY</a>.</span>
 					</footer>
 
 			</div>
