--- a/index.html
+++ b/index.html
@@ -1,49 +1,79 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title> RockyTimes </title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="loading">
-		<div id="wrapper">
-			<div id="bg"></div>
-			<div id="overlay"></div>
-			<div id="main">
 
-				<!-- Header -->
-					<header id="header">
-						<h2>Hey there, I'm</h2>
-						<h1><del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del> Abhijeet Saxena <del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del></h1>
-						<p>Web Developer &nbsp;&bull;&nbsp; Quirky Geek &nbsp;&bull;&nbsp; Never asked for this</p>
-						<nav>
-							<ul>
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-							</ul>
-						</nav>
-					</header>
+<head>
+	<title> RockyTimes </title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<link rel="shortcut icon" href="assets/css/images/favicon.png" type="image/png">
+	<link rel="icon" type="image/png" href="assets/css/images/favicon.png" />
+</head>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<span class="copyright">Made with <span class="icon fa-heart"></span> by <a href="#">ROCKY</a>.</span>
-					</footer>
+<body class="loading">
+	<div id="wrapper">
+		<div id="bg"></div>
+		<div id="overlay"></div>
+		<div id="main">
 
-			</div>
+			<!-- Header -->
+			<header id="header">
+				<h2>Hey there, I'm</h2>
+				<h1>
+					<del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del> Abhijeet Saxena
+					<del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del>
+				</h1>
+				<p>Web Developer &nbsp;&bull;&nbsp; Quirky Geek &nbsp;&bull;&nbsp; Never asked for this</p>
+				<nav>
+					<ul>
+						<li>
+							<a href="#" class="icon fa-twitter">
+								<span class="label">Twitter</span>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="icon fa-facebook">
+								<span class="label">Facebook</span>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="icon fa-linkedin">
+								<span class="label">Dribbble</span>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="icon fa-github">
+								<span class="label">Github</span>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="icon fa-envelope-o">
+								<span class="label">Email</span>
+							</a>
+						</li>
+					</ul>
+				</nav>
+			</header>
+
+			<!-- Footer -->
+			<footer id="footer">
+				<span class="copyright">Made with
+					<span class="icon fa-heart"></span> by
+					<a href="#">ROCKY</a>.</span>
+			</footer>
+
 		</div>
-		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-		<script>
-			window.onload = function() { document.body.className = ''; }
-			window.ontouchmove = function() { return false; }
-			window.onorientationchange = function() { document.body.scrollTop = 0; }
-		</script>
-	</body>
+	</div>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script>
+		window.onload = function () { document.body.className = ''; }
+		window.ontouchmove = function () { return false; }
+		window.onorientationchange = function () { document.body.scrollTop = 0; }
+	</script>
+</body>
+
 </html>
