Adding Link hrefs

--- a/index.html
+++ b/index.html
@@ -31,27 +31,27 @@
 				<nav>
 					<ul>
 						<li>
-							<a href="#" class="icon fa-twitter">
+							<a href="https://twitter.com/itsRocky93" class="icon fa-twitter">
 								<span class="label">Twitter</span>
 							</a>
 						</li>
 						<li>
-							<a href="#" class="icon fa-facebook">
+							<a href="https://www.facebook.com/abhijeet.saxena.568" class="icon fa-facebook">
 								<span class="label">Facebook</span>
 							</a>
 						</li>
 						<li>
-							<a href="#" class="icon fa-linkedin">
+							<a href="https://www.linkedin.com/in/abhijeet-saxena-685b4abb/" class="icon fa-linkedin">
 								<span class="label">Dribbble</span>
 							</a>
 						</li>
 						<li>
-							<a href="#" class="icon fa-github">
+							<a href="https://github.com/rocky93" class="icon fa-github">
 								<span class="label">Github</span>
 							</a>
 						</li>
 						<li>
-							<a href="#" class="icon fa-envelope-o">
+							<a href="mailto:saxenaabhijeet@outlook.com" class="icon fa-envelope-o">
 								<span class="label">Email</span>
 							</a>
 						</li>
