--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://www.facebook.com/abhijeet.saxena.568" class="icon fa-facebook">
+							<a href="https://www.facebook.com/abhijeet.saxena93" class="icon fa-facebook">
 								<span class="label">Facebook</span>
 							</a>
 						</li>
 						<li>
-							<a href="https://www.linkedin.com/in/abhijeet-saxena-685b4abb/" class="icon fa-linkedin">
+							<a href="https://www.linkedin.com/in/abhijeet-saxena/" class="icon fa-linkedin">
 								<span class="label">Dribbble</span>
 							</a>
 						</li>
 						<li>
-							<a href="https://github.com/rocky93" class="icon fa-github">
+							<a href="https://github.com/itsrockyy" class="icon fa-github">
 								<span class="label">Github</span>
 							</a>
 						</li>
