Update styles and text

--- a/index.html
+++ b/index.html
@@ -1,79 +1,120 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html>
+  <head>
+    <title>Abhijeet Saxena</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8
+      ]><script src="assets/js/ie/html5shiv.js"></script
+    ><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <!--[if lte IE 8
+      ]><link rel="stylesheet" href="assets/css/ie8.css"
+    /><![endif]-->
+    <!--[if lte IE 9
+      ]><link rel="stylesheet" href="assets/css/ie9.css"
+    /><![endif]-->
+    <link
+      rel="shortcut icon"
+      href="assets/css/images/favicon.png"
+      type="image/png"
+    />
+    <link rel="icon" type="image/png" href="assets/css/images/favicon.png" />
+  </head>
 
-<head>
-	<title> RockyTimes </title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	<link rel="shortcut icon" href="assets/css/images/favicon.png" type="image/png">
-	<link rel="icon" type="image/png" href="assets/css/images/favicon.png" />
-</head>
+  <body class="loading">
+    <div id="wrapper">
+      <div id="bg"></div>
+      <div id="overlay"></div>
+      <div id="main">
+        <!-- Header -->
+        <header id="header">
+          <img
+            src="./assets//avatar.jpeg"
+            alt="Abhijeet Saxena Avatar"
+            style="border-radius: 50%; width: 100px"
+          />
+          <h2>Hey there, I'm</h2>
+          <h1>
+            <del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del> Abhijeet Saxena
+            <del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del>
+          </h1>
+          <p>
+            Web Developer &nbsp;&bull;&nbsp; Techie &nbsp;&bull;&nbsp; ♡
+            Javascript &nbsp;&bull;&nbsp; Building Delightful User Experiences
+          </p>
+          <nav>
+            <ul>
+              <li>
+                <a
+                  href="https://twitter.com/itsRocky93"
+                  class="icon fa-twitter"
+                >
+                  <span class="label">Twitter</span>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.facebook.com/abhijeet.saxena93"
+                  class="icon fa-facebook"
+                >
+                  <span class="label">Facebook</span>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/abhijeet-saxena/"
+                  class="icon fa-linkedin"
+                >
+                  <span class="label">Dribbble</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/itsrockyy" class="icon fa-github">
+                  <span class="label">Github</span>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="mailto:saxenaabhijeet@outlook.com"
+                  class="icon fa-envelope-o"
+                >
+                  <span class="label">Email</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <a
+            style="border-bottom: solid 2px white;font-weight: bold;"
+            href="https://github.com/itsRockyy?tab=repositories"
+            target="_blank"
+          >
+            See My Work</a
+          >
+        </header>
 
-<body class="loading">
-	<div id="wrapper">
-		<div id="bg"></div>
-		<div id="overlay"></div>
-		<div id="main">
-
-			<!-- Header -->
-			<header id="header">
-				<h2>Hey there, I'm</h2>
-				<h1>
-					<del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del> Abhijeet Saxena
-					<del>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</del>
-				</h1>
-				<p>Web Developer &nbsp;&bull;&nbsp; Quirky Geek &nbsp;&bull;&nbsp; Never asked for this</p>
-				<nav>
-					<ul>
-						<li>
-							<a href="https://twitter.com/itsRocky93" class="icon fa-twitter">
-								<span class="label">Twitter</span>
-							</a>
-						</li>
-						<li>
-							<a href="https://www.facebook.com/abhijeet.saxena93" class="icon fa-facebook">
-								<span class="label">Facebook</span>
-							</a>
-						</li>
-						<li>
-							<a href="https://www.linkedin.com/in/abhijeet-saxena/" class="icon fa-linkedin">
-								<span class="label">Dribbble</span>
-							</a>
-						</li>
-						<li>
-							<a href="https://github.com/itsrockyy" class="icon fa-github">
-								<span class="label">Github</span>
-							</a>
-						</li>
-						<li>
-							<a href="mailto:saxenaabhijeet@outlook.com" class="icon fa-envelope-o">
-								<span class="label">Email</span>
-							</a>
-						</li>
-					</ul>
-				</nav>
-			</header>
-
-			<!-- Footer -->
-			<footer id="footer">
-				<span class="copyright">Made with
-					<span class="icon fa-heart"></span> by
-					<a href="#">ROCKY</a>.</span>
-			</footer>
-
-		</div>
-	</div>
-	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-	<script>
-		window.onload = function () { document.body.className = ''; }
-		window.ontouchmove = function () { return false; }
-		window.onorientationchange = function () { document.body.scrollTop = 0; }
-	</script>
-</body>
-
+        <!-- Footer -->
+        <footer id="footer">
+          <span class="copyright"
+            >Made with <span class="icon fa-heart"></span> by Abhijeet</span
+          >
+        </footer>
+      </div>
+    </div>
+    <!--[if lte IE 8
+      ]><script src="assets/js/ie/respond.min.js"></script
+    ><![endif]-->
+    <script>
+      window.onload = function() {
+        document.body.className = "";
+      };
+      window.ontouchmove = function() {
+        return false;
+      };
+      window.onorientationchange = function() {
+        document.body.scrollTop = 0;
+      };
+    </script>
+  </body>
 </html>
