--- a/index.html
+++ b/index.html
@@ -5,35 +5,26 @@
     <title>Abhijeet Saxena</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--[if lte IE 8
-      ]><script src="assets/js/ie/html5shiv.js"></script
-    ><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
-    <!--[if lte IE 8
-      ]><link rel="stylesheet" href="assets/css/ie8.css"
-    /><![endif]-->
-    <!--[if lte IE 9
-      ]><link rel="stylesheet" href="assets/css/ie9.css"
-    /><![endif]-->
     <link
       rel="shortcut icon"
-      href="assets/css/images/favicon.png"
+      href="assets/images/favicon.png"
       type="image/png"
     />
-    <link rel="icon" type="image/png" href="assets/css/images/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
 
   <body class="loading">
     <div id="wrapper">
       <div id="bg"></div>
-      <div id="overlay"></div>
+      <div class="social-links"></div>
       <div id="main">
         <!-- Header -->
         <header id="header">
           <img
-            src="assets/avatar.jpeg"
+            src="assets/images/avatar.jpeg"
             alt="Abhijeet Saxena Avatar"
-            style="border-radius: 50%; width: 100px"
+            style="border-radius: 50%; width: 100px;"
           />
           <h2>Hey there, I'm</h2>
           <h1>
@@ -47,46 +38,75 @@
           <nav>
             <ul>
               <li>
-                <a
-                  href="https://twitter.com/itsRocky93"
-                  class="icon fa-twitter"
-                >
-                  <span class="label">Twitter</span>
+                <a target="_blank" href="https://twitter.com/itsRocky93">
+                  <svg viewBox="0 0 512 512">
+                    <path
+                      fill="currentColor"
+                      d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
+                    ></path>
+                  </svg>
                 </a>
               </li>
               <li>
                 <a
+                  target="_blank"
                   href="https://www.facebook.com/abhijeet.saxena93"
-                  class="icon fa-facebook"
                 >
-                  <span class="label">Facebook</span>
+                  <svg viewBox="0 0 320 512">
+                    <path
+                      fill="currentColor"
+                      d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
+                    ></path>
+                  </svg>
                 </a>
               </li>
               <li>
                 <a
+                  target="_blank"
                   href="https://www.linkedin.com/in/abhijeet-saxena/"
-                  class="icon fa-linkedin"
                 >
-                  <span class="label">Dribbble</span>
+                  <svg viewBox="0 0 448 512">
+                    <path
+                      fill="currentColor"
+                      d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
+                    ></path>
+                  </svg>
                 </a>
               </li>
               <li>
-                <a href="https://github.com/itsrockyy" class="icon fa-github">
-                  <span class="label">Github</span>
+                <a target="_blank" href="https://github.com/itsrockyy">
+                  <svg viewBox="0 0 480 512">
+                    <path
+                      fill="currentColor"
+                      d="M186.1 328.7c0 20.9-10.9 55.1-36.7 55.1s-36.7-34.2-36.7-55.1 10.9-55.1 36.7-55.1 36.7 34.2 36.7 55.1zM480 278.2c0 31.9-3.2 65.7-17.5 95-37.9 76.6-142.1 74.8-216.7 74.8-75.8 0-186.2 2.7-225.6-74.8-14.6-29-20.2-63.1-20.2-95 0-41.9 13.9-81.5 41.5-113.6-5.2-15.8-7.7-32.4-7.7-48.8 0-21.5 4.9-32.3 14.6-51.8 45.3 0 74.3 9 108.8 36 29-6.9 58.8-10 88.7-10 27 0 54.2 2.9 80.4 9.2 34-26.7 63-35.2 107.8-35.2 9.8 19.5 14.6 30.3 14.6 51.8 0 16.4-2.6 32.7-7.7 48.2 27.5 32.4 39 72.3 39 114.2zm-64.3 50.5c0-43.9-26.7-82.6-73.5-82.6-18.9 0-37 3.4-56 6-14.9 2.3-29.8 3.2-45.1 3.2-15.2 0-30.1-.9-45.1-3.2-18.7-2.6-37-6-56-6-46.8 0-73.5 38.7-73.5 82.6 0 87.8 80.4 101.3 150.4 101.3h48.2c70.3 0 150.6-13.4 150.6-101.3zm-82.6-55.1c-25.8 0-36.7 34.2-36.7 55.1s10.9 55.1 36.7 55.1 36.7-34.2 36.7-55.1-10.9-55.1-36.7-55.1z"
+                    ></path>
+                  </svg>
                 </a>
               </li>
               <li>
-                <a
-                  href="mailto:saxenaabhijeet@outlook.com"
-                  class="icon fa-envelope-o"
-                >
-                  <span class="label">Email</span>
+                <a target="_blank" href="mailto:saxenaabhijeet@outlook.com">
+                  <svg viewBox="0 0 512 512">
+                    <path
+                      fill="currentColor"
+                      d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
+                    ></path>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a target="_blank" href="tel:7620146989">
+                  <svg viewBox="0 0 512 512">
+                    <path
+                      fill="currentColor"
+                      d="M493.4 24.6l-104-24c-11.3-2.6-22.9 3.3-27.5 13.9l-48 112c-4.2 9.8-1.4 21.3 6.9 28l60.6 49.6c-36 76.7-98.9 140.5-177.2 177.2l-49.6-60.6c-6.8-8.3-18.2-11.1-28-6.9l-112 48C3.9 366.5-2 378.1.6 389.4l24 104C27.1 504.2 36.7 512 48 512c256.1 0 464-207.5 464-464 0-11.2-7.7-20.9-18.6-23.4z"
+                    ></path>
+                  </svg>
                 </a>
               </li>
             </ul>
           </nav>
           <a
-            style="border-bottom: solid 2px white;font-weight: bold;"
+            style="border-bottom: solid 2px white; font-weight: bold;"
             href="https://github.com/itsRockyy?tab=repositories"
             target="_blank"
           >
@@ -96,23 +116,18 @@
 
         <!-- Footer -->
         <footer id="footer">
-          <span class="copyright"
-            >Made with <span class="icon fa-heart"></span> by Abhijeet</span
-          >
+          Made with ❤️ by Abhijeet
         </footer>
       </div>
     </div>
-    <!--[if lte IE 8
-      ]><script src="assets/js/ie/respond.min.js"></script
-    ><![endif]-->
     <script>
-      window.onload = function() {
+      window.onload = function () {
         document.body.className = "";
       };
-      window.ontouchmove = function() {
+      window.ontouchmove = function () {
         return false;
       };
-      window.onorientationchange = function() {
+      window.onorientationchange = function () {
         document.body.scrollTop = 0;
       };
     </script>
