feat(app): Add social links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Abhijeet Saxena</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="./main.css" />
     <link
       rel="shortcut icon"
       href="assets/images/favicon.png"
@@ -17,14 +17,63 @@
   <body class="loading">
     <div id="wrapper">
       <div id="bg"></div>
-      <div class="social-links"></div>
-      <div id="main">
+      <div class="social-links">
+        <a
+          target="_blank"
+          href="https://www.facebook.com/abhijeet.saxena93"
+          data-hover="Facebook"
+        >
+          <svg viewBox="0 0 320 512">
+            <path
+              fill="currentColor"
+              d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          target="_blank"
+          href="https://www.instagram.com/hey_im_abhi/"
+          data-hover="Instagram"
+        >
+          <svg viewBox="0 0 448 512">
+            <path
+              fill="currentColor"
+              d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          target="_blank"
+          href="https://twitter.com/itsRocky93"
+          data-hover="Twitter"
+        >
+          <svg viewBox="0 0 512 512">
+            <path
+              fill="currentColor"
+              d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          target="_blank"
+          href="https://medium.com/@abhijeet.saxena"
+          data-hover="Medium"
+        >
+          <svg viewBox="0 0 512 512">
+            <path
+              fill="currentColor"
+              d="M71.5 142.3c.6-5.9-1.7-11.8-6.1-15.8L20.3 72.1V64h140.2l108.4 237.7L364.2 64h133.7v8.1l-38.6 37c-3.3 2.5-5 6.7-4.3 10.8v272c-.7 4.1 1 8.3 4.3 10.8l37.7 37v8.1H307.3v-8.1l39.1-37.9c3.8-3.8 3.8-5 3.8-10.8V171.2L241.5 447.1h-14.7L100.4 171.2v184.9c-1.1 7.8 1.5 15.6 7 21.2l50.8 61.6v8.1h-144v-8L65 377.3c5.4-5.6 7.9-13.5 6.5-21.2V142.3z"
+            ></path>
+          </svg>
+        </a>
+      </div>
+      <main>
         <!-- Header -->
-        <header id="header">
+        <header>
           <img
-            src="assets/images/avatar.jpeg"
+            class="avatar"
+            src="assets/images/avatar.jpg"
             alt="Abhijeet Saxena Avatar"
-            style="border-radius: 50%; width: 100px;"
           />
           <h2>Hey there, I'm</h2>
           <h1>
@@ -38,32 +87,10 @@
           <nav>
             <ul>
               <li>
-                <a target="_blank" href="https://twitter.com/itsRocky93">
-                  <svg viewBox="0 0 512 512">
-                    <path
-                      fill="currentColor"
-                      d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
-                    ></path>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  target="_blank"
-                  href="https://www.facebook.com/abhijeet.saxena93"
-                >
-                  <svg viewBox="0 0 320 512">
-                    <path
-                      fill="currentColor"
-                      d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
-                    ></path>
-                  </svg>
-                </a>
-              </li>
-              <li>
                 <a
                   target="_blank"
                   href="https://www.linkedin.com/in/abhijeet-saxena/"
+                  data-hover="LinkedIn"
                 >
                   <svg viewBox="0 0 448 512">
                     <path
@@ -74,7 +101,11 @@
                 </a>
               </li>
               <li>
-                <a target="_blank" href="https://github.com/itsrockyy">
+                <a
+                  target="_blank"
+                  href="https://github.com/itsrockyy"
+                  data-hover="Github"
+                >
                   <svg viewBox="0 0 480 512">
                     <path
                       fill="currentColor"
@@ -84,7 +115,11 @@
                 </a>
               </li>
               <li>
-                <a target="_blank" href="mailto:saxenaabhijeet@outlook.com">
+                <a
+                  target="_blank"
+                  href="mailto:saxenaabhijeet@outlook.com"
+                  data-hover="Email"
+                >
                   <svg viewBox="0 0 512 512">
                     <path
                       fill="currentColor"
@@ -94,7 +129,7 @@
                 </a>
               </li>
               <li>
-                <a target="_blank" href="tel:7620146989">
+                <a target="_blank" href="tel:7620146989" data-hover="Phone">
                   <svg viewBox="0 0 512 512">
                     <path
                       fill="currentColor"
@@ -103,14 +138,28 @@
                   </svg>
                 </a>
               </li>
+              <li>
+                <a
+                  target="_blank"
+                  download
+                  href="./assets/Abhijeet Saxena Resume.pdf"
+                  data-hover="Resume"
+                >
+                  <svg viewBox="0 0 384 512">
+                    <path
+                      fill="currentColor"
+                      d="M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zM332.1 128H256V51.9l76.1 76.1zM48 464V48h160v104c0 13.3 10.7 24 24 24h104v288H48z"
+                    ></path>
+                  </svg>
+                </a>
+              </li>
             </ul>
           </nav>
           <a
-            style="border-bottom: solid 2px white; font-weight: bold;"
             href="https://github.com/itsRockyy?tab=repositories"
             target="_blank"
           >
-            See My Work</a
+            Checkout My Projects</a
           >
         </header>
 
@@ -118,7 +167,7 @@
         <footer id="footer">
           Made with ❤️ by Abhijeet
         </footer>
-      </div>
+      </main>
     </div>
     <script>
       window.onload = function () {
