fix(app): Use google fonts via Javascript to speed up page load speed

--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./main.css" />
-    <link
-      rel="shortcut icon"
-      href="assets/images/favicon.png"
-      type="image/png"
-    />
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
 
@@ -179,6 +174,14 @@
       window.onorientationchange = function () {
         document.body.scrollTop = 0;
       };
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ["Source Sans Pro"],
+        },
+      });
     </script>
   </body>
 </html>
