enhancement(app): Improve Lighthouse Score

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
     <title>Abhijeet Saxena</title>
     <meta charset="utf-8" />
+    <meta name="description" content="Abhijeet Saxena Portfolio Website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./main.css" />
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
@@ -17,6 +18,8 @@
           target="_blank"
           href="https://www.facebook.com/abhijeet.saxena93"
           data-hover="Facebook"
+          rel="noreferrer"
+          aria-label="Facebook"
         >
           <svg viewBox="0 0 320 512">
             <path
@@ -29,6 +32,8 @@
           target="_blank"
           href="https://www.instagram.com/hey_im_abhi/"
           data-hover="Instagram"
+          rel="noreferrer"
+          aria-label="Instagram"
         >
           <svg viewBox="0 0 448 512">
             <path
@@ -41,6 +46,8 @@
           target="_blank"
           href="https://twitter.com/itsRocky93"
           data-hover="Twitter"
+          rel="noreferrer"
+          aria-label="Twitter"
         >
           <svg viewBox="0 0 512 512">
             <path
@@ -53,6 +60,8 @@
           target="_blank"
           href="https://medium.com/@abhijeet.saxena"
           data-hover="Medium"
+          rel="noreferrer"
+          aria-label="Medium"
         >
           <svg viewBox="0 0 512 512">
             <path
@@ -86,6 +95,8 @@
                   target="_blank"
                   href="https://www.linkedin.com/in/abhijeet-saxena/"
                   data-hover="LinkedIn"
+                  rel="noreferrer"
+                  aria-label="LinkedIn"
                 >
                   <svg viewBox="0 0 448 512">
                     <path
@@ -100,6 +111,8 @@
                   target="_blank"
                   href="https://github.com/itsrockyy"
                   data-hover="Github"
+                  rel="noreferrer"
+                  aria-label="Github"
                 >
                   <svg viewBox="0 0 480 512">
                     <path
@@ -114,6 +127,8 @@
                   target="_blank"
                   href="mailto:saxenaabhijeet@outlook.com"
                   data-hover="Email"
+                  rel="noreferrer"
+                  aria-label="Email"
                 >
                   <svg viewBox="0 0 512 512">
                     <path
@@ -124,7 +139,13 @@
                 </a>
               </li>
               <li>
-                <a target="_blank" href="tel:7620146989" data-hover="Phone">
+                <a
+                  target="_blank"
+                  href="tel:7620146989"
+                  data-hover="Phone"
+                  rel="noreferrer"
+                  aria-label="Phone"
+                >
                   <svg viewBox="0 0 512 512">
                     <path
                       fill="currentColor"
@@ -139,6 +160,8 @@
                   download
                   href="./assets/Abhijeet Saxena Resume.pdf"
                   data-hover="Resume"
+                  rel="noreferrer"
+                  aria-label="Resume"
                 >
                   <svg viewBox="0 0 384 512">
                     <path
@@ -153,6 +176,7 @@
           <a
             href="https://github.com/itsRockyy?tab=repositories"
             target="_blank"
+            rel="noreferrer"
           >
             Checkout My Projects</a
           >
