--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Abhijeet Saxena Portfolio Website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./main.min.css" />
+    <link rel="stylesheet" href="./main.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
 
@@ -44,7 +44,7 @@
         </a>
         <a
           target="_blank"
-          href="https://twitter.com/itsRocky93"
+          href="https://twitter.com/hey_im_abhi"
           data-hover="Twitter"
           rel="noreferrer"
           aria-label="Twitter"
@@ -81,9 +81,7 @@
           </picture>
 
           <h2>Hey there, I'm</h2>
-          <h1>
-            Abhijeet Saxena
-          </h1>
+          <h1>Abhijeet Saxena</h1>
           <p>
             Web Developer &nbsp;&bull;&nbsp; Techie &nbsp;&bull;&nbsp; ♡
             Javascript &nbsp;&bull;&nbsp; Building Delightful User Experiences
@@ -183,9 +181,7 @@
         </header>
 
         <!-- Footer -->
-        <footer id="footer">
-          Made with ❤️ by Abhijeet
-        </footer>
+        <footer id="footer">Made with ❤️ by Abhijeet</footer>
       </main>
     </div>
     <script>
