--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="application-name" content="Abhijeet Saxena" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="flex column">
     <nav class="flex">
@@ -235,6 +235,6 @@
       </small>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
