Update mobile styles

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="./style.css" />
+    <!-- <link rel="stylesheet" href="assets/styles.css" /> -->
   </head>
   <body class="flex column">
     <nav class="flex">
@@ -236,5 +237,6 @@
     </footer>
 
     <script src="./main.js"></script>
+    <!-- <script src="assets/main.js"></script> -->
   </body>
 </html>
