Update mobile styles

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <meta name="application-name" content="Abhijeet Saxena" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="stylesheet" href="./style.css" />
-    <!-- <link rel="stylesheet" href="assets/styles.css" /> -->
+    <!-- <link rel="stylesheet" href="./style.css" /> -->
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body class="flex column">
     <nav class="flex">
@@ -236,7 +236,7 @@
       </small>
     </footer>
 
-    <script src="./main.js"></script>
-    <!-- <script src="assets/main.js"></script> -->
+    <!-- <script src="./main.js"></script> -->
+    <script src="assets/main.js"></script>
   </body>
 </html>
