Compress images more

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           Everything from concept to creation ✨
         </p>
         <a class="link" href="#projects">Check Out My Work 💻</a>
-        <img src="assets/photo.gif" alt="" />
+        <img src="assets/photo.gif" alt="" loading="lazy" />
       </section>
 
       <section id="projects" class="flex column">
@@ -93,7 +93,11 @@
             </div>
           </div>
           <a href="https://popcorn-times.netlify.app/" class="poster">
-            <img src="/assets/projects/popcorn.png" alt="Popcorn Times" />
+            <img
+              src="/assets/projects/popcorn.png"
+              alt="Popcorn Times"
+              loading="lazy"
+            />
           </a>
         </article>
         <article>
@@ -110,7 +114,11 @@
             </div>
           </div>
           <a href="https://abhijeetsaxena.in/wysiwyg/" class="poster">
-            <img src="/assets/projects/wysiwyg.png" alt="WYSIWYG Editor" />
+            <img
+              src="/assets/projects/wysiwyg.png"
+              alt="WYSIWYG Editor"
+              loading="lazy"
+            />
           </a>
         </article>
         <article>
@@ -129,7 +137,11 @@
             </div>
           </div>
           <a href="https://abhijeetsaxena.in/star-wars" class="poster">
-            <img src="/assets/projects/starwars.png" alt="Star Wars" />
+            <img
+              src="/assets/projects/starwars.png"
+              alt="Star Wars"
+              loading="lazy"
+            />
           </a>
         </article>
       </section>
