--- a/index.html
+++ b/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Abhijeet Saxena" />
+    <meta
+      name="description"
+      content="This is the personal site of Abhijeet Saxena. Web UI Engineer @Apple. Everything from concept to creation ✨"
+    />
+    <meta name="keywords" content="Personal Site, Portfolio, Web Developer" />
+    <meta
+      property="og:image"
+      content="https://developer.mozilla.org/static/img/opengraph-logo.png"
+    />
+    <meta
+      property="og:description"
+      content="This is the personal site of Abhijeet Saxena. Web UI Engineer @Apple. Everything from concept to creation ✨"
+    />
+    <meta property="og:title" content="Abhijeet Saxena — Web Dev" />
+    <meta name="twitter:title" content="Abhijeet Saxena — Web Dev" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abhijeet Saxena — Web Dev</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/images/apple-touch-icon.png"
+      href="assets/icons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/images/favicon-32x32.png"
+      href="assets/icons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/images/favicon-16x16.png"
+      href="assets/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="assets/images/site.webmanifest" />
+    <link rel="manifest" href="assets/site.webmanifest" />
     <link
       rel="mask-icon"
-      href="assets/images/safari-pinned-tab.svg"
+      href="assets/icons/safari-pinned-tab.svg"
       color="#000000"
     />
     <meta name="apple-mobile-web-app-title" content="Abhijeet Saxena" />
@@ -39,7 +56,7 @@
     <nav class="flex">
       <a href="/">
         <img
-          src="./assets/images/apple-touch-icon.png"
+          src="./assets/icons/apple-touch-icon.png"
           alt="Abhijeet Saxena"
           height="48px"
           width="48px"
@@ -70,13 +87,13 @@
           Everything from concept to creation ✨
         </p>
         <a class="link" href="#projects">Check Out My Work 💻</a>
-        <img src="assets/photo.gif" alt="" loading="lazy" />
+        <img src="assets/photo.gif" alt="Avatar" loading="lazy" />
       </section>
 
       <section id="projects" class="flex column">
         <article>
           <div class="description">
-            <h3>Popcorn Times</h3>
+            <h2>Popcorn Times</h2>
             <p>
               A simple web crawler that searches OTT providers for a particular
               TV series or movie
@@ -93,16 +110,20 @@
             </div>
           </div>
           <a href="https://popcorn-times.netlify.app/" class="poster">
-            <img
-              src="/assets/projects/popcorn.png"
-              alt="Popcorn Times"
-              loading="lazy"
-            />
+            <picture>
+              <source srcset="/assets/webp/popcorn.webp" type="image/webp" />
+              <source srcset="/assets/png/popcorn.png" type="image/png" />
+              <img
+                src="/assets/png/popcorn.png"
+                alt="Star Wars"
+                loading="lazy"
+              />
+            </picture>
           </a>
         </article>
         <article>
           <div class="description">
-            <h3>WYSIWYG Editor</h3>
+            <h2>WYSIWYG Editor</h2>
             <p>A rich text editor in which "What You See Is What You Get"</p>
             <div class="flex app-links">
               <a class="link" href="https://abhijeetsaxena.in/wysiwyg/"
@@ -114,16 +135,20 @@
             </div>
           </div>
           <a href="https://abhijeetsaxena.in/wysiwyg/" class="poster">
-            <img
-              src="/assets/projects/wysiwyg.png"
-              alt="WYSIWYG Editor"
-              loading="lazy"
-            />
+            <picture>
+              <source srcset="/assets/webp/wysiwyg.webp" type="image/webp" />
+              <source srcset="/assets/png/wysiwyg.png" type="image/png" />
+              <img
+                src="/assets/png/wysiwyg.png"
+                alt="Star Wars"
+                loading="lazy"
+              />
+            </picture>
           </a>
         </article>
         <article>
           <div class="description">
-            <h3>Star Wars</h3>
+            <h2>Star Wars</h2>
             <p>Create your own customized Star Wars Opening Crawl</p>
             <div class="flex app-links">
               <a class="link" href="https://abhijeetsaxena.in/star-wars"
@@ -137,11 +162,15 @@
             </div>
           </div>
           <a href="https://abhijeetsaxena.in/star-wars" class="poster">
-            <img
-              src="/assets/projects/starwars.png"
-              alt="Star Wars"
-              loading="lazy"
-            />
+            <picture>
+              <source srcset="/assets/webp/starwars.webp" type="image/webp" />
+              <source srcset="/assets/png/starwars.png" type="image/png" />
+              <img
+                src="/assets/png/starwars.png"
+                alt="Star Wars"
+                loading="lazy"
+              />
+            </picture>
           </a>
         </article>
       </section>
@@ -173,7 +202,9 @@
       </p>
       <ul class="flex">
         <li data-hover="Linkedin">
-          <a href="https://www.linkedin.com/in/abhijeet-saxena/"
+          <a
+            href="https://www.linkedin.com/in/abhijeet-saxena/"
+            aria-label="Linkedin"
             ><svg viewBox="0 0 32 32">
               <path
                 d="M16 0C7.164 0 0 7.163 0 16c0 8.836 7.164 16 16 16s16-7.164 16-16c0-8.837-7.164-16-16-16zm-4.156 22.277H8.58v-9.82h3.264v9.82zm-1.632-11.161h-.021c-1.096 0-1.804-.755-1.804-1.697 0-.963.73-1.696 1.846-1.696s1.804.733 1.825 1.696c0 .943-.709 1.697-1.846 1.697zm13.401 11.161h-3.264v-5.254c0-1.32-.472-2.22-1.654-2.22-.901 0-1.438.607-1.674 1.194-.086.21-.108.503-.108.796v5.484H13.65s.043-8.898 0-9.82h3.264v1.391c.433-.669 1.209-1.622 2.942-1.622 2.147 0 3.757 1.404 3.757 4.42v5.631z"
@@ -181,7 +212,7 @@
           ></a>
         </li>
         <li data-hover="Github">
-          <a href="https://github.com/abhijeet-saxena"
+          <a href="https://github.com/abhijeet-saxena" aria-label="Github"
             ><svg viewBox="0 0 32 32">
               <path
                 d="M16 0C7.163 0 0 7.163 0 16s7.164 16 16 16c8.837 0 16-7.163 16-16S24.837 0 16 0zm2.067 18.96c.333.289.592 1.308.592 1.776v4.144H13.926s.007-1.405 0-2.368c-3.24.697-4.144-1.776-4.144-1.776-.592-1.184-1.184-1.776-1.184-1.776-1.184-.703 0-.592 0-.592 1.184 0 1.776 1.184 1.776 1.184 1.039 1.764 2.888 1.48 3.552 1.184 0-.592.259-1.487.592-1.776-2.586-.291-4.738-1.776-4.738-4.736s.594-3.552 1.186-4.144c-.12-.292-.615-1.37.018-2.96 0 0 1.163 0 2.347 1.776.587-.587 2.368-.592 2.961-.592.591 0 2.373.005 2.959.592 1.184-1.776 2.35-1.776 2.35-1.776.633 1.59.138 2.668.018 2.96.592.592 1.184 1.184 1.184 4.144.001 2.96-2.149 4.445-4.736 4.736z"
@@ -189,7 +220,7 @@
           ></a>
         </li>
         <li data-hover="Facebook">
-          <a href="https://www.facebook.com/heyimabhi"
+          <a href="https://www.facebook.com/heyimabhi" aria-label="Facebook"
             ><svg viewBox="0 0 32 32">
               <path
                 d="M16 0C7.164 0 0 7.164 0 16s7.164 16 16 16 16-7.164 16-16S24.836 0 16 0zm3.488 15.999h-2.239v8.124h-3.357V16h-1.677v-2.8h1.677v-1.681c0-2.284.947-3.642 3.637-3.642h2.24v2.8h-1.4c-1.047 0-1.117.392-1.117 1.121l-.003 1.402h2.536l-.297 2.799z"
@@ -197,7 +228,9 @@
           ></a>
         </li>
         <li data-hover="Instagram">
-          <a href="https://www.instagram.com/hey_im_abhi/"
+          <a
+            href="https://www.instagram.com/hey_im_abhi/"
+            aria-label="Instagram"
             ><svg viewBox="0 0 32 32">
               <path
                 d="M20.842 16.139c0 2.584-2.163 4.68-4.831 4.68-2.666 0-4.83-2.097-4.83-4.68 0-.464.071-.911.201-1.334l-1.211-.263v6.801c0 .341.146.486.486.486h10.687c.34 0 .486-.145.486-.486v-6.801l-1.188.263c.129.424.2.87.2 1.334z"
@@ -212,7 +245,7 @@
           ></a>
         </li>
         <li data-hover="Twitter">
-          <a href="https://twitter.com/hey_im_abhi"
+          <a href="https://twitter.com/hey_im_abhi" aria-label="Twitter"
             ><svg viewBox="0 0 32 32">
               <path
                 d="M16 0C7.164 0 0 7.164 0 16s7.164 16 16 16 16-7.164 16-16S24.836 0 16 0zm8.44 10.857c-.074.124-.454.559-.86.956-.688.683-.725.757-.725 1.329 0 .881-.417 2.72-.835 3.725-.774 1.888-2.432 3.838-4.091 4.82-2.334 1.378-5.442 1.727-8.059.919-.872-.274-2.371-.969-2.371-1.093 0-.038.454-.087 1.008-.1a6.876 6.876 0 0 0 3.292-.919l.663-.398-.762-.26c-1.081-.373-2.051-1.23-2.297-2.037-.074-.261-.049-.274.638-.274l.712-.012-.602-.286c-.713-.361-1.364-.968-1.683-1.59-.233-.447-.528-1.577-.442-1.664.025-.037.283.038.577.137.847.311.958.236.467-.286-.921-.944-1.204-2.347-.762-3.676l.209-.596.811.807c1.659 1.627 3.612 2.596 5.847 2.881l.614.074-.037-.609c-.11-1.577.86-3.018 2.396-3.577.565-.199 1.524-.223 2.15-.05.246.074.712.323 1.044.546l.602.41.663-.212c.369-.111.86-.298 1.081-.422.209-.112.393-.174.393-.137 0 .211-.455.932-.835 1.329-.517.559-.369.609.675.236.629-.207.642-.207.519.029z"
@@ -220,7 +253,7 @@
           ></a>
         </li>
         <li data-hover="Medium">
-          <a href="https://abhijeet-saxena.medium.com/"
+          <a href="https://abhijeet-saxena.medium.com/" aria-label="Medium"
             ><svg viewBox="0 0 512 512">
               <path
                 d="M511.2 256C511.2 115.155 396.851.806 256.006.806h-.012C115.149.806.8 115.155.8 256c0 140.845 114.349 255.194 255.194 255.194h.012C396.851 511.194 511.2 396.845 511.2 256zm-229.576.002c0 62.731-50.508 113.584-112.81 113.584S56 318.721 56 256.002c0-62.72 50.508-113.588 112.814-113.588 62.306 0 112.81 50.857 112.81 113.588zm123.757 0c0 59.048-25.255 106.934-56.407 106.934-31.153 0-56.407-47.886-56.407-106.934 0-59.048 25.25-106.935 56.403-106.935s56.407 47.872 56.407 106.935h.004zm50.619 0c0 52.892-8.881 95.796-19.838 95.796-10.958 0-19.835-42.892-19.835-95.796s8.88-95.796 19.835-95.796c10.954 0 19.838 42.888 19.838 95.796z"
@@ -228,7 +261,7 @@
           ></a>
         </li>
         <li data-hover="Codepen">
-          <a href="https://codepen.io/abhijeet-saxena"
+          <a href="https://codepen.io/abhijeet-saxena" aria-label="Codepen"
             ><svg viewBox="0 0 72 72">
               <g fill="none" fill-rule="evenodd">
                 <path
