--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       sizes="16x16"
       href="assets/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="assets/site.webmanifest" />
+    <link rel="manifest" href="assets/icons/site.webmanifest" />
     <link
       rel="mask-icon"
       href="assets/icons/safari-pinned-tab.svg"
@@ -276,9 +276,7 @@
           ></a>
         </li>
       </ul>
-      <small>
-        Handcrafted with <span style="color: red">♥</span> by © Abhijeet Saxena
-      </small>
+      <small> Handcrafted with ♥ by © Abhijeet Saxena </small>
     </footer>
 
     <!-- <script src="./main.js"></script> -->
