Add redirect rule

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <meta name="application-name" content="Abhijeet Saxena" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#ffffff" />
+    <base href="/abhijeet-saxena/" />
     <!-- <link rel="stylesheet" href="./style.css" /> -->
     <link rel="stylesheet" href="assets/style.css" />
   </head>
