--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </picture>
           </a>
         </article>
-        <article>
+        <!-- <article>
           <div class="description">
             <h2>Popcorn Times</h2>
             <p>
@@ -175,7 +175,7 @@
               />
             </picture>
           </a>
-        </article>
+        </article> -->
         <article>
           <div class="description">
             <h2>WYSIWYG Editor</h2>
